fix author bug for "Huamin Qu"

--- a/survis/bib/references.bib
+++ b/survis/bib/references.bib
@@ -325,7 +325,7 @@
 }
 
 @article{Jin2020,
- author = {Jin, Zhihua and Wang, Yong and Wang, Qianwen and Ming, Yao and Ma, Tengfei and Qu, Huamin},
+ author = {Zhihua Jin and Yong Wang and Qianwen Wang and Yao Ming and Tengfei Ma and Huamin Qu},
  doi = {10.1109/TVCG.2022.3148107},
  journal = {{IEEE} Transactions on Visualization and Computer Graphics},
  keywords = {xdl_category:Model Behavior, application_domain:Domain agnostic, model:GNN, users:ML Architects, interactivity:passive, phase:test, source_code:yes, evaluation:F-USt, evaluation:CSt, visualizations:Node-Link, visualizations:Bar, visualizations:Scatter, visualizations:Table, visualizations:PCP, visualizations:Treemap, analytics_family:Similarity Analysis, analytics_subject:Internals, analytics_novelty:Custom},
@@ -856,7 +856,7 @@
 }
 
 @article{Wang2022a,
- author = {Wang, Xingbo and He, Jianben and Jin, Zhihua and Yang, Muqiao and Wang, Yong and Qu, Huamin},
+ author = {Xingbo Wang  and Jianben He  and Zhihua Jin  and Muqiao Yang  and Yong Wang and Huamin Qu},
  doi = {10.1109/tvcg.2021.3114794},
  journal = {{IEEE} Transactions on Visualization and Computer Graphics},
  keywords = {xdl_category:Feature Attribution, xdl_category:Model Behavior, application_domain:Linguistics, model:Variable, users:ML Trainers, interactivity:passive, phase:test, source_code:yes, evaluation:F-CSt, visualizations:Heatmap, visualizations:Node-Link, visualizations:Line/Area, visualizations:Image, visualizations:Scatter, visualizations:Words, visualizations:Sankey, visualizations:Radial, analytics_family:Similarity Analysis, analytics_family:Feature Influence, analytics_subject:Features, analytics_novelty:Novel},
